<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp"
	    android:text="@string/textView1"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView1"
	    android:paddingTop="10dp"
	    android:text="@string/textView2"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textStyle="italic" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView2"
	    android:paddingTop="10dp"
	    android:text="@string/textView3"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textStyle="italic" />

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView3"
	    android:paddingTop="10dp"
	    android:text="@string/textView4"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button android:id="@+id/btnStart" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:onClick="btnStart_OnClick"
		android:text="@string/buttonStart" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"/>

	<Button android:id="@+id/btnStop" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:onClick="btnStop_OnClick"
		android:text="@string/buttonStop" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"/>
</RelativeLayout>
